...
        verticalStackView.translatesAutoresizingMaskIntoConstraints = false
        verticalStackView.centerYAnchor.constraint(equalTo: view.safeAreaLayoutGuide.centerYAnchor, constant: 0).isActive = true
        verticalStackView.leadingAnchor.constraint(equalTo: view.safeAreaLayoutGuide.leadingAnchor, constant: 50).isActive = true
        verticalStackView.trailingAnchor.constraint(equalTo: view.safeAreaLayoutGuide.trailingAnchor, constant: -50).isActive = true
        
        elementsCountTextField = createTextField(text: "")
        textsButton = createButton(title: "Texts")
        buttonsButton = createButton(title: "Buttons")
        imagesButton = createButton(title: "Images")
        collectionViewButton = createButton(title: "Collection View")
        blurredViewsButton = createButton(title: "Blur")
        animatedTextsButton = createButton(title: "Animation: text")
        animatedButtonsButton = createButton(title: "Animation: buttons")
        animatedImagesButton = createButton(title: "Animation: images")
        animatedBlurredViewsButton = createButton(title: "Animation: blur")
        typicalAppButton = createButton(title: "Typical App")

...
        textField.text = text
        textField.layer.cornerRadius = 10
        textField.backgroundColor = .white.withAlphaComponent(0.2)
        textField.translatesAutoresizingMaskIntoConstraints = false
        textField.delegate = self
        textField.heightAnchor.constraint(equalToConstant: 50).isActive = true
        textField.placeholder = "Enter number of elements"
        textField.textAlignment = .center // This line centers the text inside the text field.
        textField.delegate = self // Set the view controller as the text field's delegate
        
        
        return textField
    }
...
